css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Lemonada', cursive, serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 100vh;
  color: rgb(59, 39, 83);
  transition: background-image 1s ease-in-out;
}

.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
}

.top-container {
  display: flex;
  width: 100%;
  position: absolute;
  justify-content: space-between;
}

/* Refresh Button */
.btn {
  width: 60px;
  height: 60px;
  border: 0;
  background: url('https://www.pngarts.com/files/7/Update-Button-PNG-Image.png');
  background-size: contain;
  background-repeat: no-repeat;
  filter: grayscale(1);
  margin: 10px 0;
}
.btn:hover {
  filter: grayscale(0.8);
}
.btn:active,
.btn:focus {
  outline: 0;
}
.btn:active {
  transform: scale(1.02);
}

.time-container {
  max-width: 1500px;
}

#time {
  font-size: 6rem;
  font-family: 'Lemonada', cursive, serif;
}

#data {
  font-size: 3rem;
  font-family: 'Lemonada', cursive, serif;
  color: rgb(175, 211, 158);
}

.day {
  color: aqua;
  font-size: 4rem;
}

.months {
  color: rgb(253, 218, 122);
}

h1 {
  margin-bottom: 3rem;
  font-family: 'Lemonada', cursive, serif;
}

h2 {
  font-family: 'Lemonada', cursive, serif;
  margin-bottom: 0.5rem;
  opacity: 0.7;
}

span {
  font-family: 'Lemonada', cursive, serif;
}

#name {
  font-family: 'Lemonada', cursive, serif;
  min-width: 100px;
  border: 1px solid rgb(114, 114, 114);
  border-radius: 5px;
  font-size: 35px;
  color: aquamarine;
}

#focus {
  font-family: 'Lemonada', cursive, serif;
  min-width: 100px;
  font-weight: bold;
  border: 1px solid rgb(114, 114, 114);
  border-radius: 5px;
  opacity: 1;
  color: aquamarine;
}

.city {
  width: 300px;
  padding: 10px 0;
  margin: 20px auto;
  border: 1px solid #ccc;
  border-radius: 5px;
}
.temperature {
  font-size: 40px;
  margin-bottom: 20px;
}
.weather-description {
  width: 200px;
  height: auto;
  margin: 10px auto;
  font-size: 26px;
  padding: 12px 0;
  color: #ffffff;
  border-radius: 5px;
}
.weather-icon {
  font-size: 160px;
  color: #44aadd;
}
.weather-icon:hover {
  animation: shake 1.5s;
}
@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }
  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }
}

#author {
  color: rgb(255, 163, 163);
}

#text {
  color: antiquewhite;
}

@media (max-width: 700px) {
  #time {
    font-size: 6rem;
  }
}

